# axum-email-otp-auth

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  publish.yaml
src/: axum_api.rs  config.rs  cron.rs  email.rs  errors.rs  lib.rs  rate_limit.rs  service.rs  storage.rs  token.rs
src/storage/: memory.rs  redis.rs
tests/: magic_link.rs  otp_flow.rs  rate_limit.rs
tests/common/: mod.rs
