[package]
name = "axum-email-otp-auth"
version = "0.1.0"
edition = "2021"
description = "A production-ready, framework-agnostic Rust library for OTP email authentication."
license = "MIT"
repository = "https://github.com/roksprogar/axum-email-otp-auth"
documentation = "https://docs.rs/axum-email-otp-auth"
readme = "README.md"
keywords = ["authentication", "otp", "email", "redis", "rust"]
categories = ["authentication", "web-programming"]
include = ["src/**/*", "LICENSE", "README.md", "tests/**/*"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"

# Optional Axum support
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true, features = ["util"] }
tower-cookies = { version = "0.11.0", optional = true }
tower-http = { version = "0.5", optional = true }



[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"

[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tower-cookies"]

